# Wyrm

./: .dockerignore  .env  .gitignore  CONTRIBUITIONS.md  Cargo.toml  LICENCE  Milestones.md  RELEASE_NOTES.md  Readme.md  docker-compose.yml  install_server.sh
c2/: .env  Cargo.toml  Dockerfile  Readme.md
c2/migrations/: 20250614124105_agent_table.sql  20250614124140_add_sleep.sql  20250614132037_tasks.sql  20250615070633_flesh_table.sql  20250615072852_add_col_back_tasks.sql  20250615085223_add_uid.sql  20250615211204_rm_col_from_tasks.sql  20250616171233_ch_col.sql  20250619055731_results_table.sql  20250621175632_add_time.sql  20250622075242_agent_staging.sql  20250622080004_protect_staging.sql  20250622080748_remove_constraint.sql  20250622083052_add_col_staging.sql  20250622094131_add_col_staging_again.sql  20250622094232_del_col_agent.sql  20250622122051_protect_pe_name.sql  20250622130349_port_to_agent_staging.sql  20250622154423_operator_table.sql  20250622161952_db_add_cstr.sql  20250624164511_col_for_toks.sql  20250627184526_default_env.sql  20250712164452_update_field_for_sleep.sql  20250712164815_update_field_for_prt.sql  20250712165040_update_field_for_prt_again.sql  20250719090503_rm_constraint_upload.sql  20250727101559_xor_payload.sql  20251025085314_update_time_completed_field.sql  20251026120715_change_dt_field.sql  20251026121136_change_dt_field_2.sql  20251026122000_time_comp_rm.sql  20251026144632_add_agent_id_to_ct.sql  20251119185937_add_pulled_col.sql  20251127184944_download_col.sql  20251127193415_make_bigint.sql  20251207091938_beacon_console_line.sql  20251207092341_testagent.sql  20251215120000_completed_tasks_pending_idx.sql  20251215123000_tasks_fetched_default.sql
c2/profiles/: default.toml  profile.example.toml
c2/src/: admin_task_dispatch.rs  agents.rs  api.rs  app_state.rs  db.rs  exfil.rs  logging.rs  main.rs  middleware.rs  net.rs  profiles.rs  timestomping.rs
c2/src/admin_task_dispatch/: dispatch_table.rs  execute.rs  implant_builder.rs  mod.rs
c2/src/api/: admin_routes.rs  agent_get.rs  agent_post.rs  mod.rs
c2/src/pe_utils/: mod.rs  types.rs
c2_data/: Readme.md
c2_transfer/: Readme.md
client/: .env  Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.html  readme.md
client-leptos/: Cargo.toml  index.html
client-leptos/src/: main.rs  net.rs
client-leptos/src/controller/: build_profiles.rs  dashboard.rs  mod.rs
client-leptos/src/models/: dashboard.rs  mod.rs
client-leptos/src/pages/: build_profiles.rs  dashboard.rs  file_upload.rs  logged_in_headers.rs  login.rs  logout.rs  mod.rs
client-leptos/src/tasks/: task_dispatch.rs  task_impl.rs  utils.rs
client-leptos/static/: styles.css
client/.cargo/: config.toml
client/src/: console_output.rs  main.rs  middleware.rs  models.rs  net.rs  state.rs
client/src/api/: dashboard.rs  file_upload.rs  login.rs  mod.rs  staged_resources.rs
client/src/controller/: build_profiles.rs  dashboard.rs  mod.rs
client/src/gui/: login.rs  mod.rs  new_tasks.rs
client/src/gui/normal_page/: controller.rs  mod.rs  model.rs  normal_page.rs  view.rs
client/src/gui/staging/: mod.rs  stage_all.rs  stage_upload.rs
client/src/models/: dashboard.rs  mod.rs
client/src/pages/: build_profiles.rs  dashboard.rs  file_upload.rs  logged_in_headers.rs  login.rs  staged_resources.rs
client/src/tasks/: mod.rs  task_dispatch.rs  task_dispatcher.rs  task_impl.rs  task_implementation.rs  utils.rs
client/static/: styles.css
client/templates/: dash.html  file_upload.html
client/templates/htmx_applets/: agent_tabs.html  staged_resource_rows.html
client_v2/: Cargo.toml  README.md  docker-compose.yml
client_v2/src/: main.rs  middleware.rs  models.rs  net.rs
client_v2/src/api/: dashboard.rs  file_upload.rs  login.rs  mod.rs  pages.rs  profile_builder.rs  staged_resources.rs
client_v2/src/tasks/: mod.rs  task_dispatch.rs  task_impl.rs
client_v2/static/: main_styles.css
client_v2/templates/: dash.html  file_upload.html  header.html  login.html  profile_builder.html  staged_resources.html
client_v2/templates/htmx_applets/: agent_tabs.html  connected_agent_panel.html  implant_messages.html
implant/: Cargo.toml  Readme.md  build.rs  rust-toolchain.toml  set_dbg_env.ps1
implant/.cargo/: config.toml
implant/src/: comms.rs  entry.rs  lib.rs  main.rs  main_svc.rs  wyrm.rs
implant/src/anti_sandbox/: memory.rs  mod.rs  trig.rs
implant/src/evasion/: amsi.rs  etw.rs  mod.rs  veh.rs
implant/src/execute/: dotnet.rs  ffi.rs  mod.rs
implant/src/native/: Readme.md  accounts.rs  filesystem.rs  mod.rs  processes.rs  registry.rs  shell.rs
implant/src/rdi_loader/: mod.rs  shim.rs
implant/src/spawn/: early_cascade.rs  hollow_apc.rs  mod.rs
implant/src/spawn_inject/: early_cascade.rs  injection.rs  mod.rs
implant/src/stubs/: mod.rs  rdi.rs  shim.rs
implant/src/utils/: allocate.rs  comptime.rs  console.rs  etw.rs  export_comptime.rs  export_resolver.rs  mod.rs  pe_stomp.rs  proxy.rs  strings.rs  svc_controls.rs  time_utils.rs
implant/src/wofs/: mod.rs
loader/: Cargo.toml  build.rs
loader/.cargo/: config.toml
loader/src/: export_comptime.rs  injector.rs  lib.rs  main.rs  main_svc.rs  utils.rs
nginx/: nginx.conf
resources/: .$wyrm_staging.drawio.bkp  wyrm.excalidraw
shared/: Cargo.toml  readme.md
shared/src/: lib.rs  net.rs  pretty_print.rs  process.rs  stomped_structs.rs  task_types.rs  tasks.rs
shared_c2_client/: Cargo.toml  readme.md
shared_c2_client/src/: lib.rs
shared_no_std/: Cargo.toml
shared_no_std/src/: export_resolver.rs  lib.rs  memory.rs
wofs_static/: Readme.md
