[package]
name = "c2"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
axum = { version = "0.8", features = ["macros", "multipart"] }
serde = "1.0"
tokio = { version = "1.43", features = ["full"] }
serde_json = "1"
dotenvy = "0.15.7"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
shared_c2_client ={ path = "../shared_c2_client" }
tokio-util = {version = "0.7.15", features = ["io"] }
http-body-util = "0.1.3"
rand = "0.9.1"
base64 = "0.22.1"
rust-crypto = "0.2.36"
scc = { version = "2.3.4" }
futures = "0.3"
toml = "0.9.6"
thiserror = "2.0"
tower-http = { version = "0.6", features = ["cors"]}
axum-extra = { version = "0.12.0", features = ["cookie"] }
