[package]
name = "wyrm_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = { version = "0.8", features = ["macros", "multipart"]}
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47.1", features = [ "rt-multi-thread", "macros" ]}
tower-http = { version = "0.6.6", features = ["fs"] }
shared = { git = "https://github.com/0xflux/wyrm", package = "shared", rev = "0065c18f57f67647252e1ec47333a04d51a1bc1a" }
shared_c2_client = { git = "https://github.com/0xflux/wyrm", package = "shared_c2_client", rev = "0065c18f57f67647252e1ec47333a04d51a1bc1a" }
serde_json = "1.0.145"
dotenvy = "0.15.7"
thiserror = "2.0.16"
chrono = { version = "0.4", features = ["serde"] }