[package]
name = "wyrm_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = { version = "0.8.4", features = ["macros", "multipart"]}
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.226", features = ["derive"] }
tokio = { version = "1.47.1", features = [ "rt-multi-thread", "macros" ]}
tower-http = { version = "0.6.6", features = ["fs"] }
shared = { path = "../shared" }
shared_c2_client = { path = "../shared_c2_client" }
serde_json = "1.0.145"
dotenvy = "0.15.7"
thiserror = "2.0.16"
chrono = { version = "0.4", features = ["serde"] }