[package]
name = "shared_no_std"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-sys = {version = "0.61", features = [
    "Win32",
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Services",
    "Win32_System_Memory",
    "Win32_System_Threading", 
]}